--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="panel panel-primary">
 		<div class="panel-heading">
-			<h3 class="panel-title">pipeline demo 分页查询111</h3>
+			<h3 class="panel-title">pipeline demo 分页查询111OKGoodLaLaLa</h3>
 		</div>
 	</div>
 	<div class="container">
